Fix z-index minficattion

--- a/components/navbar/navbar.css
+++ b/components/navbar/navbar.css
@@ -17,7 +17,7 @@
 .ampstart-headerbar {
   background-color: var(--color-navbar-primary);
   color: var(--color-navbar-font-primary);
-  z-index: var(--zindex-highest);
+  z-index: var(--zindex-max);
   box-shadow: 0 0 5px 2px rgba(0,0,0,.1);
 }
 
