--- a/css/ampstart-base/base-page-vars.css
+++ b/css/ampstart-base/base-page-vars.css
@@ -48,7 +48,7 @@
 
   --font-family: -apple-system, BlinkMacSystemFont,"Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
 
-  --zindex-highest: 999;
+  --zindex-max: 999;
 
   --body-min-width: 315px;
   --content-max-width: 700px;
